--- a/Curso_Python_32h_Aula07.ipynb
+++ b/Curso_Python_32h_Aula07.ipynb
@@ -6,7 +6,7 @@
       "name": "Curso_Python_32h_Aula07.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM75UUYWYrdsubi2eJQQZRr",
+      "authorship_tag": "ABX9TyMLAKOCzVojsegwCsRno000",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -297,10 +297,202 @@
     {
       "cell_type": "code",
       "source": [
+        "\"\"\"Crie uma classe Agenda que pode armazenar pessoas e que seja capaz de\n",
+        "realizar as seguintes operações:\"\"\"\n",
+        "class Pessoa:\n",
+        "  def __init__(self, nome, cpf, telefone):\n",
+        "    self.nome = nome\n",
+        "    self.cpf = cpf\n",
+        "    self.telefone = telefone\n",
+        "  def __str__(self):\n",
+        "    return f\"{self.nome} {self.cpf} {self.telefone}\"\n",
+        "\n",
+        "p1 = Pessoa(\"Eliane\", \"12345678910\", \"(99)99999-9999\")\n",
+        "print(p1)\n",
+        "p2 = Pessoa(\"João\", \"12345678911\", \"(98)98989-9090\")\n",
+        "print(p2)\n",
+        "p3 = Pessoa(\"Eduardo\", \"12345678912\", \"(97)97979-7778\")\n",
+        "print(p3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eZ1aVZzJPRpH",
+        "outputId": "727b4449-7ba8-4592-95f8-e037f9a04201"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Eliane 12345678910 (99)99999-9999\n",
+            "João 12345678911 (98)98989-9090\n",
+            "Eduardo 12345678912 (97)97979-7778\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Agenda:\n",
+        "  def __init__(self):\n",
+        "    self.pessoas = []\n",
+        "  def __str__(self):\n",
+        "    texto = \"\"\n",
+        "    for pessoa in self.pessoas:\n",
+        "      texto += f\"{pessoa.nome} {pessoa.cpf} {pessoa.telefone}\\n\"\n",
+        "    return texto\n",
+        "\n",
+        "  def armazena_pessoa(self, nome, cpf, telefone):\n",
+        "    p = Pessoa(nome, cpf, telefone)\n",
+        "    self.armazena_obj_pessoa(p)\n",
+        "  def armazena_obj_pessoa(self, pessoa):\n",
+        "    if type(pessoa) == Pessoa:\n",
+        "      self.pessoas.append(pessoa)\n",
+        "    else:\n",
+        "      print(\"Só é possível armazenar instâncias de Pessoa\")\n",
+        "\n",
+        "  def buscar_pessoa(self, nome):\n",
+        "    for i in range( len(self.pessoas) ):\n",
+        "      if self.pessoas[i].nome == nome:\n",
+        "        return i\n",
+        "  def buscar_cpf(self, cpf):\n",
+        "    for pessoa in self.pessoas:\n",
+        "      if pessoa.cpf == cpf: return pessoa\n",
+        "  def buscar_telefone(self, telefone):\n",
+        "    for pessoa in self.pessoas:\n",
+        "      if pessoa.telefone == telefone: return pessoa\n",
+        "\n",
+        "  def remover_pessoa(self, nome):\n",
+        "    i = self.buscar_pessoa(nome)\n",
+        "    if type(i) == int:\n",
+        "      self.pessoas.pop(i)\n",
+        "  def remover_obj_pessoa(self, pessoa):\n",
+        "    self.pessoas.remove(pessoa)\n",
+        "\n",
+        "agenda = Agenda()\n",
+        "agenda.armazena_pessoa(\"Vânia\", \"12345678913\", \"(96)88889-9987\")\n",
+        "agenda.armazena_pessoa(\"Gabriel\", \"12345678914\", \"(95)99876-0222\")\n",
+        "agenda.armazena_pessoa(\"Michele\", \"12345678915\", \"(94)98765-4432\")\n",
+        "print(agenda.buscar_pessoa(\"Gabriel\"))\n",
+        "agenda.remover_pessoa(\"Gabriel\")\n",
+        "print(agenda)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k29YpfNoQuPa",
+        "outputId": "f8a422b6-2f21-4ada-f3f0-ef01ea747bbe"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "Vânia 12345678913 (96)88889-9987\n",
+            "Michele 12345678915 (94)98765-4432\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "agenda.armazena_obj_pessoa(p1)\n",
+        "agenda.armazena_obj_pessoa(p2)\n",
+        "agenda.armazena_obj_pessoa(p3)\n",
+        "print(agenda)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Zi2E4EJfRQKO",
+        "outputId": "47112561-ffe2-45f4-c0e1-8d5728cd5773"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Vânia 12345678913 (96)88889-9987\n",
+            "Michele 12345678915 (94)98765-4432\n",
+            "Eliane 12345678910 (99)99999-9999\n",
+            "João 12345678911 (98)98989-9090\n",
+            "Eduardo 12345678912 (97)97979-7778\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(agenda.buscar_cpf(\"12345678910\"))\n",
+        "print(agenda.buscar_telefone(\"(96)88889-9987\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ywfy5VSHVUWh",
+        "outputId": "895c63ee-ecf9-4f9a-c3a1-04cbc018f9c8"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Eliane 12345678910 (99)99999-9999\n",
+            "Vânia 12345678913 (96)88889-9987\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "agenda.remover_obj_pessoa(p1)\n",
+        "print(agenda)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M9YS7Tg8UStn",
+        "outputId": "0ee41d55-aa03-4f8d-84e0-b0c0aaa8d2be"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Vânia 12345678913 (96)88889-9987\n",
+            "Michele 12345678915 (94)98765-4432\n",
+            "João 12345678911 (98)98989-9090\n",
+            "Eduardo 12345678912 (97)97979-7778\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "eZ1aVZzJPRpH"
+        "id": "MB4pWbyUV7fM"
       },
       "execution_count": null,
       "outputs": []
