--- a/Curso_Python_32h_Aula07.ipynb
+++ b/Curso_Python_32h_Aula07.ipynb
@@ -6,7 +6,7 @@
       "name": "Curso_Python_32h_Aula07.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMLAKOCzVojsegwCsRno000",
+      "authorship_tag": "ABX9TyO0vUL3dRraayCxn9Pz6GIY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -248,7 +248,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 287
+          "height": 293
         },
         "id": "fJb7-UCuOfbN",
         "outputId": "8605b23e-5624-4ae5-b1c5-2a232088d0b9"
@@ -489,10 +489,59 @@
     {
       "cell_type": "code",
       "source": [
+        "a = 3.141516\n",
+        "print(\"%.2f\" % a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MB4pWbyUV7fM",
+        "outputId": "b5c63d38-8802-4c4c-ccc8-ce10ae8bdfa8"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.14\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import datetime\n",
+        "hora = datetime.datetime.now()\n",
+        "print(hora.replace(microsecond=0))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A0GCQtcaE7kM",
+        "outputId": "4732dca2-ac0d-4246-bba7-bbc314c13ad0"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2022-05-07 01:16:00\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "MB4pWbyUV7fM"
+        "id": "MVTs0pahFMjC"
       },
       "execution_count": null,
       "outputs": []
