--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1besgd4ghNSrPAP9qhK5DjczjdadJHf22",
-      "authorship_tag": "ABX9TyN2+Tui6mD/EZ+Bnb2vbaIO",
+      "authorship_tag": "ABX9TyO5qqVY+yMU3bzIMAhZll8r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -158,7 +158,7 @@
         "id": "CxgESDUkW3X8",
         "outputId": "e16d40aa-134f-4f23-df93-3d839d519f2e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,7 +357,7 @@
         "id": "lCYVTZ5VXhsq",
         "outputId": "3f780f48-a3d0-4fd8-b111-4c90304f1f1f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -620,6 +620,46 @@
           "text": [
             "None\n",
             "[1 2 3 4 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#a atribuição com = copia apenas a referência!!!\n",
+        "\n",
+        "import numpy as np\n",
+        "arr = np.array([1, 2, 3, 4, 5])\n",
+        "x = arr\n",
+        "arr[0] = 43\n",
+        "print(arr)\n",
+        "print(x)\n",
+        "\n",
+        "v1 = [1,2,3,4,5]\n",
+        "v2 = v1\n",
+        "v1[0] = 43\n",
+        "print(v1)\n",
+        "print(v2)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PIpRmGg2Zhhz",
+        "outputId": "b233e314-534e-4869-a0ab-ab728b368b2e"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[43  2  3  4  5]\n",
+            "[43  2  3  4  5]\n",
+            "[43, 2, 3, 4, 5]\n",
+            "[43, 2, 3, 4, 5]\n"
           ]
         }
       ]
@@ -916,9 +956,12 @@
     {
       "cell_type": "code",
       "source": [
-        "arr1 = np.array([[1, 2], [3, 4]])\n",
+        "arr1 = np.array([[1, 2],\n",
+        "                 [3, 4]])\n",
         "\n",
-        "arr2 = np.array([[5, 6], [7, 8]])\n",
+        "arr2 = np.array([[5, 6],\n",
+        "                 [7, 8]])\n",
+        "\n",
         "\n",
         "arr = np.concatenate((arr1, arr2), axis=1)\n",
         "\n",
@@ -929,9 +972,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jSFD_r3bbDPn",
-        "outputId": "9457cab7-90da-444d-fe6c-ce0837ebab5c"
+        "outputId": "a51ca6ea-8e6b-4ea9-b91c-c74af1acacc3"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -959,9 +1002,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "06cg8SI7bDSv",
-        "outputId": "9621cbfd-0fda-4cbf-d750-e6084e07e3af"
+        "outputId": "d2d0c331-b8a9-4b5f-c947-2bde53fee48c"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -1168,7 +1211,7 @@
         "id": "vu7fZf9eb41P",
         "outputId": "db48930e-836c-4f1f-9359-b60f7bea9b0f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1263,6 +1306,7 @@
     {
       "cell_type": "code",
       "source": [
+        "from numpy import random\n",
         "x = random.choice([3, 5, 7, 9])\n",
         "\n",
         "print(x)"
@@ -1272,15 +1316,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mvg7KCzRb5IQ",
-        "outputId": "f123a6d0-6a1b-4bfa-b6e9-35054c3592ca"
+        "outputId": "704c8f74-c02d-4d0a-bc08-0d71c639091f"
       },
-      "execution_count": 7,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "5\n"
+            "7\n"
           ]
         }
       ]
@@ -1380,15 +1424,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VQgCFLsGc6pR",
-        "outputId": "4c6acc1a-5c23-46b3-9bb1-493d8b9a8d31"
+        "outputId": "c5fd8265-b042-4d05-db5c-4cd7a3dcfff6"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[5 2 4 3 1]\n"
+            "[1 3 2 4 5]\n"
           ]
         }
       ]
@@ -1406,15 +1450,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bw3HNL_dc6sS",
-        "outputId": "645f7f80-c44f-41cf-94c8-5dfee3312cd8"
+        "outputId": "3b0096eb-16e1-4d3a-f974-e21825826a07"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[3 1 5 4 2]\n",
+            "[5 3 1 2 4]\n",
             "[1 2 3 4 5]\n"
           ]
         }
@@ -1459,7 +1503,7 @@
         "id": "kFbE0cPTdtWh",
         "outputId": "dd53d92e-d527-42d8-dc51-87e124872079"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2313,7 +2357,7 @@
         "id": "9AorTxjXfAPs",
         "outputId": "a38f3602-f8c6-4b59-fcfc-448048366db6"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2359,7 +2403,7 @@
         "id": "o1Mn3v5Ae45N",
         "outputId": "6044f7cf-9263-4117-bfbe-8decc49abae9"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2392,7 +2436,7 @@
         "id": "Zwn2Uq7lfV1-",
         "outputId": "2728a9fa-63da-4194-c9c8-93e91e0a4872"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2425,7 +2469,7 @@
         "id": "O-xMBYtzfV5j",
         "outputId": "928fa284-a784-4cc0-ca35-3581c41a1abe"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3107,7 +3151,7 @@
         "id": "5iD29JcLivDs",
         "outputId": "1132dd53-1a12-4836-c7bb-3d36ceef17ce"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4135,7 +4179,7 @@
         },
         "outputId": "9e2d7912-e17f-463c-cec8-84bcc2e40b75"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4561,7 +4605,7 @@
         },
         "outputId": "8a65a637-6b4a-4a29-dd6b-d07bb19b920b"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4615,7 +4659,7 @@
         "id": "Fi-3Eb9eEvKE",
         "outputId": "bba08c15-d597-4584-dcb1-fb6b859393c3"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4670,7 +4714,7 @@
         "id": "2Y1A_Fp7EvQE",
         "outputId": "dc46b2bf-8ad6-439f-cb27-c63369408a7d"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5096,7 +5140,7 @@
         "id": "OcVLJEcDEvVa",
         "outputId": "cdbeaec8-8274-4d50-8f76-e1adf876b225"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5524,7 +5568,7 @@
         "id": "LcMgfTa4FEUm",
         "outputId": "7658ef9c-c27c-4e45-a5fa-c71691ffc111"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5950,7 +5994,7 @@
         "id": "PVaYkMEbFEbD",
         "outputId": "508e548a-64ce-44c2-bc2f-2885a6f666b7"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6007,7 +6051,7 @@
         "id": "OWNCgDsNFEgx",
         "outputId": "077d8af2-62d6-43a7-f76f-792f86761574"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6459,7 +6503,7 @@
         "id": "O1PfXIYaF1MT",
         "outputId": "b395f61d-7850-4060-8896-5c4293dfb58c"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6515,7 +6559,7 @@
         "id": "f7Gc8D47F1Yn",
         "outputId": "77f1719a-70c2-4a31-e6b0-2419012ad8bf"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6935,7 +6979,7 @@
         "id": "V67QV2zbqNR5",
         "outputId": "7ddfa6f2-8674-428d-c35e-626deb1fb499"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7104,7 +7148,7 @@
         "id": "r0jWK2KpGtkW",
         "outputId": "8f98f9e1-e453-4ef2-b926-04d4adb0f901"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7272,7 +7316,7 @@
         "id": "9kqkTKHiG-q4",
         "outputId": "0c83581d-edc7-494e-9165-a337f47e6450"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7314,7 +7358,7 @@
         "id": "POuOjpPmHFfc",
         "outputId": "0ddedc2d-086f-4cc8-9e95-a7849d34c50d"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7346,7 +7390,7 @@
         "id": "akG1XdQFHFk5",
         "outputId": "a0cc2aa6-b2df-407c-b1c1-ca8720240932"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7378,7 +7422,7 @@
         "id": "IqfS-jKQHFz3",
         "outputId": "e898b801-6068-4084-fcec-57bcc73bdf18"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7468,7 +7512,7 @@
         "id": "9J-MO27NkFWH",
         "outputId": "bb72f3fd-b8d9-410a-8b44-567895f411f0"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7491,7 +7535,7 @@
         "id": "UvSbwPxDynF8",
         "outputId": "bbf92fc4-670c-418a-d5a9-7996e036efd6"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7531,7 +7575,7 @@
       "metadata": {
         "id": "gI2UJlGFkFZT"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7546,7 +7590,7 @@
       "metadata": {
         "id": "FSFfe3RqkFcv"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7562,7 +7606,7 @@
         "id": "l7a_RXOikFgK",
         "outputId": "2eadc642-3cbb-4cd5-9ad7-1256710cc910"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7801,7 +7845,7 @@
         "id": "PsrKR_1GkFjB",
         "outputId": "25b0a486-1db6-4345-e1e3-f3a3e8c7c2ee"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7833,7 +7877,7 @@
         "id": "ihDGSrlXkFmF",
         "outputId": "12a7b13a-1101-4cab-abc4-0147ead23fc7"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8032,7 +8076,7 @@
         "id": "BMAqChnlkF8H",
         "outputId": "8c02d2b2-0095-444d-c688-15ce7ca848b0"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8058,7 +8102,7 @@
       "metadata": {
         "id": "Wd-f-YZQkF_K"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8073,7 +8117,7 @@
         "id": "VnRhOAtLkGCH",
         "outputId": "853f8591-a140-42ce-8f57-7adb40d08d0b"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8116,7 +8160,7 @@
         "id": "hep-Yb-akGFA",
         "outputId": "ad10d60c-6d0c-471e-c022-ed1fa0ddbb91"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8145,7 +8189,7 @@
         "id": "iXVulVOCkGIG",
         "outputId": "a6068d62-564a-4b4a-ade8-d2aa09b63a68"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8185,7 +8229,7 @@
         "id": "csga82iMkGLQ",
         "outputId": "124feb50-4b19-485e-db6c-da7dbbe395c9"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8214,7 +8258,7 @@
         "id": "BolloExykGOj",
         "outputId": "80937233-17c0-4737-cb0d-9bbc04f779e2"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8241,7 +8285,7 @@
       "metadata": {
         "id": "OPWAOTZtkGRm"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8259,7 +8303,7 @@
         "id": "ZGy_odXfkGUt",
         "outputId": "ec97a200-27e2-47d7-f58f-86af963ab7fa"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8282,7 +8326,7 @@
         "id": "dx1hLclPkGYS",
         "outputId": "54b75b19-d355-444f-a81a-4c9ae379a216"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8311,7 +8355,7 @@
         "id": "mwVkfAspkGbI",
         "outputId": "929f6536-727c-40d1-e214-65df6204c701"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -8369,7 +8413,7 @@
         "id": "FqXHP918xJQk",
         "outputId": "1a3d8206-e4f6-4948-de03-ade96d632ea2"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8393,7 +8437,7 @@
         },
         "outputId": "316cf483-bdaa-4970-eec8-69054af708db"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9009,7 +9053,7 @@
         },
         "outputId": "c607a99c-9009-48df-b5ce-3e68d10187ee"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9040,7 +9084,7 @@
         },
         "outputId": "23faf7b4-299c-41c3-a74f-00cfb7c59edd"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9071,7 +9115,7 @@
         "id": "qPgSBDkY6aeq",
         "outputId": "50bfaa8f-4432-4fff-ad9f-eaec2807cdd9"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9102,7 +9146,7 @@
         "id": "hUoJUBrv7Buw",
         "outputId": "24337418-329f-4343-afb6-f3ee47403063"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
